navbar changing into icons at 650 px , no longer stacking on top of one another covering 1/3 of the display .

--- a/main.css
+++ b/main.css
@@ -15,7 +15,7 @@ html {
 
 .list { 
     list-style: none;
-    padding: 10px;
+    padding: unset;
     margin: 0, auto;
     background-color: brown;
     border: 2px;
@@ -35,7 +35,7 @@ html {
 }
 
 
-.carousel-caption, .container-fluid, .section-authors-title, .functions--content--header {
+.carousel-caption, .container-fluid, .section-authors-title, .functions--content--header  {
     font-family: ‘LABRIT’;
     -webkit-text-stroke: 1px black;
     color: white;
@@ -146,6 +146,9 @@ main{
             max-height: 50%;
             height: 50vh!important;
     }
+
+
+    .
 }
 
 /* AUTHORS - CSS code*/
@@ -209,16 +212,35 @@ main{
     color: white;
     margin-top: 2rem;
     margin-bottom: 2rem;
+    padding: 3rem;
 }
     
 .section-subscribe-title {
-    font-size: 40px;
-    font-weight: normal;
-    margin: 0px 0px;    
+    font-size: 3rem;
+    font-weight: bold;
+    margin: 0px 0px;   
+
+    -webkit-text-stroke: 1px black;
+    color: white;
+    text-shadow:
+    3px 3px 0 #000,
+    -1px -1px 0 #000,  
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000; 
 }
-    
+.section-subscribe-text{
+    font-size: 2rem;
+}
+
+.subscribe-inputs{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
 .email {
-    width: 400px;
+    width: 30vw;
     height: 50px;
     font-size: 14px;
     color: lightgray;
@@ -232,4 +254,34 @@ main{
     text-transform: uppercase;
     color: white;
     font-weight: bold;
+}
+
+.nav-img{
+    display: none;
+
+}
+    
+@media screen and (max-width: 650px) {
+        .nav-img {
+            display: flex;
+            justify-content: center;
+            width: 75px;
+            height: 75px;
+
+        }
+        .nav-text{
+            display: none;
+        }
+           .list{
+               flex-wrap: nowrap;
+
+           }
+        .   
+        .container-block {
+            
+        }
+
+    }
+
+
 }
